# SonoscannerTest

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Parser.cpp  Parser.h  main.cpp
src/MainWindow/: MainWindow.cpp  MainWindow.h
src/parser/: CMakeLists.txt  IParser.hpp  ParserFile.cpp  ParserFile.hpp  ParserFolder.cpp  ParserFolder.hpp
src/ui/: CMakeLists.txt  IUi.hpp  QtUi.cpp  QtUi.hpp
src/ui/MainWindow/: MainWindow.ui
test/: CMakeLists.txt  ParserFileTest.cpp  ParserFolderTest.cpp  ParserTest.cpp
test/data/parser/: ecg-0.txt  ecg-1.txt  ecg-2.txt
test/parser/: CMakeLists.txt  ParserFileTest.cpp  ParserFolderTest.cpp
